<resources>
    <string name="mexico_country_code">+52</string>
    <string name="action_accept">Aceptar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_no_thanks">No, gracias</string>
    <string name="action_delete">Eliminar</string>
    <string name="action_settings">Settings</string>
    <string name="action_alert">Alerta</string>
    <string name="action_add">Agregar</string>
    <string name="action_edit">Modificar</string>
    <string name="action_save">Guardar</string>
    <string name="action_discard">Descartar</string>
    <string name="action_convert">Convertir</string>
    <string name="action_capture"> Capturar</string>
    <string name="action_next">Continuar</string>
    <string name="yes">Si</string>
    <string name="not">NO</string>
    <string name="warning">Advertencia</string>
    <string name="progress_save_msg">Guardando…</string>
    <string name="progress_load_msg">Cargando…</string>
    <string name="error_message_network">Error de conexión, verifique su conexión a internet e inténtelo nuevamente</string>
    <string name="error_no_permission">Permiso de ubicación requerido!</string>
    <string name="error_emulator">Se detecto que el dispositivo es un emulador</string>
    <string name="error_root">No es posible usar la app en dispositivos con modificaciones no autorizadas (Privilegios root o Jailbreak)</string>
    <string name="error_device_title">%s no puede ser usado</string>
    <string name="error_tampered_app">Versión invalida de la app</string>
    <string name="menu_finish">Guardar</string>
    <string name="menu_finish_section">Finalizar</string>
    <string name="menu_finish_member">Finalizar</string>
    <string name="menu_delete">Eliminar</string>
    <string name="menu_convert_to_customer">Convertir a cliente</string>
    <string name="menu_validate_prospect">Validar prospecto</string>
    <string name="menu_search_clients">Buscar clientes</string>
    <string name="menu_search_groups">Buscar grupos</string>
    <string name="menu_search_apps">Buscar solicitudes</string>
    <string name="menu_search_tasks">Buscar tareas</string>
    <string name="menu_synchronization_settings">Configuración</string>
    <string name="menu_settings">Configuración</string>
    <string name="menu_server_action">Información</string>
    <string name="val_field_required">Campo obligatorio</string>
    <string name="val_invalid_email">Ingrese un correo electrónico válido</string>
    <string name="val_invalid_telephone">Ingrese un teléfono válido</string>
    <string name="val_invalid_range">Ingrese un valor entre %1$d - %2$d</string>
    <string name="val_invalid_adult_age">La edad debe ser entre %1$d y %2$d años</string>
    <string name="val_same_phones">No pueden ser el mismo número</string>
    <string name="message_network_title">Sin Conexión</string>
    <string name="message_network_content">Verifique el estado de su conexión a internet e inténtelo nuevamente</string>
    <string name="error_save">No fue posible guardar la información, por favor inténtelo nuevamente</string>
    <string name="search_result_empty_msg">No existen resultados</string>
    <string name="operation_fail_message">Error en operación</string>
    <string name="search_dialog_default_positive_btn">Cancelar</string>
    <string name="search_dialog_default_title">Seleccione</string>
    <string name="form_hint_select_spinner">Seleccione</string>
    <string name="form_section_finished_msg">Sección finalizada!</string>
    <string name="form_hint_first_name">Primer nombre</string>
    <string name="form_hint_second_name">Segundo nombre (Opcional)</string>
    <string name="form_hint_last_name">Apellido paterno</string>
    <string name="form_hint_second_last_name">Apellido materno (Opcional)</string>
    <string name="form_hint_sex">Género</string>
    <string name="form_hint_birth_date">Fecha de nacimiento</string>
    <string name="form_hint_birth_entity">Entidad de nacimiento</string>
    <string name="form_hint_birth_country">País de nacimiento</string>
    <string name="form_hint_nationality">Nacionalidad</string>
    <string name="form_hint_education_level">Escolaridad</string>
    <string name="form_hint_occupation">Ocupación</string>
    <string name="form_hint_rfc">RFC</string>
    <string name="form_hint_curp">CURP</string>
    <string name="form_hint_telephone">Teléfono</string>
    <string name="form_hint_telephone_work">Teléfono de trabajo</string>
    <string name="form_hint_email">Correo electrónico</string>
    <string name="form_hint_cellphone">Teléfono celular</string>
    <string name="form_hint_address">Dirección</string>
    <string name="form_hint_customer_number">ID de cliente Santander</string>
    <string name="form_hint_civil_status">Estado civil</string>
    <string name="form_hint_customer_account_number">Cuenta de Ahorro</string>
    <string name="form_hint_group_name">Nombre de grupo</string>
    <string name="form_hint_cycle_number">Ciclo grupal</string>
    <string name="form_hint_app_date">Fecha de solicitud</string>
    <string name="form_hint_app_rate">Tasa</string>
    <string name="form_hint_app_term">Plazo</string>
    <string name="risk_level_low">Bajo</string>
    <string name="risk_level_medium">Medio</string>
    <string name="risk_level_hight">Alto</string>
    <string name="login_title">Inicio de sesión</string>
    <string name="login_hint_username">Usuario</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_action">Iniciar</string>
    <string name="login_loading">Iniciando sesión&#8230;</string>
    <string name="login_error">Acceso no autorizado, verifique sus credenciales e inténtelo nuevamente</string>
    <string name="permission_phone_denied">Para continuar por favor otorgue el permiso solicitado</string>
    <string name="login_offline_title">Acceso fuera de línea</string>
    <string name="login_offline_current_user">Ingresar pin de: %s</string>
    <string name="login_offline_error">Acceso no autorizado, verifique que el PIN ingresado sea correcto e inténtelo nuevamente</string>
    <string name="login_offline_change_user"><u>Cambiar de usuario</u></string>
    <string name="login_offline_forgot_pin"><u>¿Olvidó su PIN?</u></string>
    <string name="login_offline_forgot_pin_message">Para recuperar su PIN, porfavor inicie sesión en línea</string>
    <string name="login_offline_change_user_message">No se puede cambiar de usuario cuando se esta fuera de línea. Si desea cambiar de usuario, porfavor conectarse a internet.</string>
    <string name="register_device_title">Registro de dispositivo</string>
    <string name="register_device_message">Ingrese un nombre amigable para su dispositivo</string>
    <string name="register_device_input">Alias</string>
    <string name="register_device_link">Vincular</string>
    <string name="register_device_error">No se pudo vincular el dispositivo</string>
    <string name="register_device_length_error">El mínimo de caracteres debe ser %1$d y máximo %2$d</string>
    <string name="register_pin_title">Registrar PIN</string>
    <string name="register_pin_message">Ingrese su PIN de 6 dígitos</string>
    <string name="register_pin_message_confirm">Ingrese nuevamente su PIN de 6 dígitos</string>
    <string name="register_pin_error">El pin ingresado es incorrecto</string>
    <string name="people_title">Personas</string>
    <string name="people_msg_empty">Lista de personas vacía</string>
    <string name="people_msg_add">Agregar persona +</string>
    <string name="people_error_load_customers">Error cargando personas!</string>
    <string name="people_hint_search">Buscar personas</string>
    <string name="people_nav_all">Todas</string>
    <string name="people_nav_customers">Clientes</string>
    <string name="people_nav_prospects">Prospectos</string>
    <string name="customers_msg_empty">Lista de clientes vacía</string>
    <string name="customers_error_load_customers">Error cargando clientes!</string>
    <string name="customers_hint_search">Buscar clientes</string>
    <string name="person_dialog_delete">¿Está seguro de que desea eliminar permanentemente el %s?</string>
    <string name="person_delete_success_message">%s eliminado!</string>
    <string name="person_save_success_locally_message">%s guardado localmente!</string>
    <string name="person_save_success_remote_message">%s guardado en linea!</string>
    <string name="person_section_incomplete_message">No has completado todos los formularios obligatorios</string>
    <string name="person_dialog_save_draft_warning_msg">¿Desea guardar sus cambios?</string>
    <string name="person_dialog_validate_warning_msg">El prospecto ha sido validado correctamente.</string>
    <string name="person_dialog_convert_warning_msg">¿Seguro que desea convertir este prospecto en un cliente?</string>
    <string name="person_error_convert_message">No es posible convertir el prospecto a cliente</string>
    <string name="person_progress_validating">Validando…</string>
    <string name="person_progress_converting">Creando cliente…</string>
    <string name="person_error_validate">Error al consultar datos</string>
    <string name="person_no_validate">Lo sentimos, el cliente no es candidato a crédito</string>
    <string name="person_new_partner_data_message">¿Deaseas crear un nuevo cónyuge o seleccionar entre los clientes descargados?</string>
    <string name="person_create_partner">Crear</string>
    <string name="person_select_partner">Seleccionar</string>
    <string name="prospect_validated">Validado</string>
    <string name="prospect_no_validated">Pendiente de validación</string>
    <string name="customer_title">Cliente</string>
    <string name="customer_error_save">No fue posible guardar el cliente, por favor inténtelo nuevamente</string>
    <string name="customer_data_title">Datos Generales</string>
    <string name="customer_data_hint_economic_dependents">Dependientes económicos</string>
    <string name="customer_data_hint_technical_degree">Grado tecnológico</string>
    <string name="customer_data_hint_has_other_incomes">¿Tiene otros ingresos?</string>
    <string name="customer_data_hint_other_incomes">Otros ingresos</string>
    <string name="customer_data_hint_other_incomes_amount">Monto de otros ingresos</string>
    <string name="customer_data_hint_num_cycles_other_institutions">Nro de ciclos en otras instituciones</string>
    <string name="customer_data_hint_is_politically_exposed">¿Usted es o ha sido una persona políticamente expuesta (PEP)?</string>
    <string name="customer_data_hint_function_performed">¿Qué función desempeña o ha desempeñado?</string>
    <string name="customer_data_hint_has_relationship_politically_exposed">¿Tiene relación con alguien que es o ha sido PEP?</string>
    <string name="customer_data_default_cycles_other_institutions">0</string>
    <string name="groups_title">Grupos</string>
    <string name="complementary_data_hint_ife_number">Número de IFE</string>
    <string name="complementary_data_hint_passport_number">Número de pasaporte</string>
    <string name="complementary_data_hint_esign_sn">Número de Serie de Firma Electrónica</string>
    <string name="complementary_data_hint_msg_delegate_name">Nombre de persona para dejar recados</string>
    <string name="complementary_data_has_bureau_antecedents">¿Cuenta con antecedentes en buró de crédito?</string>
    <string name="complementary_data_conventional_phone">Teléfono fijo</string>
    <string name="credit_app_title">Solicitudes</string>
    <string name="simulation_title">Simulación</string>
    <string name="logout_title">Cerrar sesión</string>
    <string name="tasks_title">Tareas</string>
    <string name="sync_title">Sincronizar</string>
    <string name="sync_finish_btn">Finalizar</string>
    <string name="synchronization_up">Datos pendientes</string>
    <string name="synchronization_details">Detalles:</string>
</resources>