<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_options"
        android:checkableBehavior="single">
        <item
            android:id="@+id/list_people"
            android:icon="@drawable/ic_nav_customer"
            android:title="@string/people_title"/>

        <item
            android:id="@+id/list_group"
            android:icon="@drawable/ic_nav_group"
            android:title="@string/groups_title"/>

        <item
            android:id="@+id/list_credit_app"
            android:icon="@drawable/ic_nav_credit_app"
            android:title="@string/credit_app_title"/>
        <item
            android:id="@+id/list_simulation"
            android:icon="@drawable/ic_nav_simulation"
            android:title="@string/simulation_title"/>
        <item
            android:id="@+id/list_tasks"
            android:icon="@drawable/ic_nav_task"
            android:title="@string/tasks_title"/>

        <item
            android:id="@+id/list_default"
            android:title="Testing"
            android:visible="false"/>
    </group>

    <group
        android:id="@+id/group_footer"
        android:checkableBehavior="none">
        <item
            android:id="@+id/list_sync"
            android:icon="@drawable/ic_rotate"
            android:title="@string/sync_title"/>
        <item
            android:id="@+id/list_settings"
            android:icon="@drawable/ic_settings_dark"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/list_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_title"/>
    </group>
</menu>