<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_convert_to_customer"
        android:icon="@drawable/ic_convert_customer"
        android:title="@string/menu_convert_to_customer"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_validate_prospect"
        android:icon="@drawable/ic_validate_prospect"
        android:title="@string/menu_validate_prospect"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/menu_delete"
        android:visible="false"
        app:showAsAction="ifRoom"/>
</menu>