<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <include layout="@layout/layout_error"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_customer_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_customer_number"
                style="@style/Form.FieldReadOnly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_customer_number"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_first_name"
                android:inputType="textCapWords"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_second_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_second_name"
                android:inputType="textCapWords"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_last_name"
                android:inputType="textCapWords"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_second_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_second_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_second_last_name"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:hint="@string/form_hint_birth_date"
                />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_birth_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.cobis.gestionasesores.widgets.searchablespinner.SearchableSpinner
            android:id="@+id/spinner_federal_entity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinner_civil_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinner_nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinner_education_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinner_occupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_economic_dependents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_economic_dependents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_data_hint_economic_dependents"
                android:inputType="number"
                android:maxLength="2"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_curp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_curp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/form_hint_curp"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_rfc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_rfc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/form_hint_rfc"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_technical_degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.cobis.gestionasesores.widgets.BooleanQuestionView
            android:id="@+id/boolean_question_has_other_incomes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bqv_question="@string/customer_data_hint_has_other_incomes"/>

        <Spinner
            android:id="@+id/spinner_other_incomes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_other_income_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.cobis.gestionasesores.widgets.currencyfield.CurrencyInputEditText
                android:id="@+id/input_other_income_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_data_hint_other_incomes_amount"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_num_cycles_other_institutions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_num_cycles_other_institutions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_data_hint_num_cycles_other_institutions"
                android:inputType="number"
                android:text="@string/customer_data_default_cycles_other_institutions"/>
        </android.support.design.widget.TextInputLayout>

        <com.cobis.gestionasesores.widgets.BooleanQuestionView
            android:id="@+id/boolean_question_is_politically_exposed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bqv_question="@string/customer_data_hint_is_politically_exposed"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_function_performed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_function_performed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/customer_data_hint_function_performed"
                android:inputType="textCapSentences"/>
        </android.support.design.widget.TextInputLayout>

        <com.cobis.gestionasesores.widgets.BooleanQuestionView
            android:id="@+id/boolean_question_has_relationship_politically_exposed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bqv_question="@string/customer_data_hint_has_relationship_politically_exposed"/>

        <Spinner
            android:id="@+id/spinner_relationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_customer_account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_customer_account_number"
                style="@style/Form.FieldReadOnly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_customer_account_number"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</ScrollView>