<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <include layout="@layout/layout_error"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_ife_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_ife_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/complementary_data_hint_ife_number"
                android:inputType="textNoSuggestions|textFilter"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_passport_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_passport_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/complementary_data_hint_passport_number"
                android:inputType="textNoSuggestions|textFilter"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_esign_sn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_esign_sn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/complementary_data_hint_esign_sn"
                android:inputType="textNoSuggestions|textFilter"/>
        </android.support.design.widget.TextInputLayout>

        <com.cobis.gestionasesores.widgets.phonefield.PhoneInputLayout
            android:id="@+id/input_msg_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pf_hint="@string/form_hint_telephone"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_msg_delegate_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_msg_delegate_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/complementary_data_hint_msg_delegate_name"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions|textCapWords|textFilter"/>
        </android.support.design.widget.TextInputLayout>

        <com.cobis.gestionasesores.widgets.BooleanQuestionView
            android:id="@+id/boolean_question_has_bureau_antecedents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bqv_question="@string/complementary_data_has_bureau_antecedents"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_landline"
                style="@style/Form.FieldReadOnly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/complementary_data_conventional_phone"
                android:inputType="phone"
                android:maxLength="10"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</ScrollView>