<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cobis.gestionasesores.presentation.registerdevice.RegisterDeviceFragment">

    <TextView
        android:id="@+id/text_alias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/register_device_message"
        android:textSize="18sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_alias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_alias">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_device_input"
            android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_alias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_alias"
        android:layout_marginTop="16dp"
        android:layout_alignParentEnd="true"
        android:text="@string/register_device_link"/>
</RelativeLayout>
